--- a/package.json
+++ b/package.json
@@ -51,5 +51,14 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
+  },
+  "scripts": {
+    "build": "npm run build --ws",
+    "commit": "npm run commit:pre && npm run commit:force",
+    "commit:pre": "npm run format && npm run lint",
+    "commit:force": "git-cz",
+    "format": "prettier --write \"packages/**/src/**/*.ts\"",
+    "lint": "eslint packages/**/src/** --ext .ts",
+    "test": "jest --coverage"
   }
 }
