--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "eslint-plugin-promise": "^6.0.0",
     "git-cz": "^4.9.0",
     "jest": "^29.5.0",
+    "lerna": "^6.6.2",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   },
   "scripts": {
-    "build": "npm run build --ws",
+    "build": "lerna run build",
     "commit": "npm run commit:pre && npm run commit:force",
     "commit:pre": "npm run format && npm run lint",
     "commit:force": "git-cz",
