--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.3"
   },
   "scripts": {
