--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,8 @@ on:
     branches: ['dev']
 
 jobs:
-  build:
+  install:
+    name: Install
     runs-on: ubuntu-latest
 
     strategy:
@@ -24,9 +25,30 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    needs: install
+
+    steps:
       - name: Lint
         run: npm run lint
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
       - name: Build
         run: npm run build
+
+  test:
+    name: Unit-Test
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       - name: Unit-Test
         run: npm run test
