fix(template-typescript-react): 🐛 fix package name
BREAKING CHANGE: 🧨 package name changed

--- a/packages/template-typescript-react/package.json
+++ b/packages/template-typescript-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@esora/streamer-ui",
+  "name": "@esora/template-typescript-react",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
